test/classes/bradc/overloadMethods/v1NoReturnValue.good
v1NoReturnValue.chpl:2: error: conflicting return type specified for 'C.bbox(x: int): void'
v1NoReturnValue.chpl:16: error:   overridden by 'D.bbox(x: int(64)): range(int(64),bounded,false)'
